// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`opacity renders 0 1`] = `
Array [
  .c0 {
  opacity: 0;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: 0;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: 0;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`opacity renders function 1`] = `
Array [
  .c0 {
  opacity: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: has;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: has;
}

<div
    className="c0"
  />,
]
`;

exports[`opacity renders invalid theme path 1`] = `
Array [
  .c0 {
  opacity: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`opacity renders negative number 1`] = `
Array [
  .c0 {
  opacity: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`opacity renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  opacity: July;
}

@media screen and (min-width:November) {
  .c0 {
    opacity: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    opacity: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    opacity: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    opacity: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  opacity: July;
}

@media screen and (min-width:November) {
  .c0 {
    opacity: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    opacity: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    opacity: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    opacity: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  opacity: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    opacity: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    opacity: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    opacity: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    opacity: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  opacity: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    opacity: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    opacity: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    opacity: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    opacity: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`opacity renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    opacity: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    opacity: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    opacity: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    opacity: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    opacity: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    opacity: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    opacity: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    opacity: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    opacity: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    opacity: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    opacity: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    opacity: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    opacity: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    opacity: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    opacity: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    opacity: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`opacity renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  opacity: July;
}

@media May {
  .c0 {
    opacity: August;
  }
}

@media April {
  .c0 {
    opacity: September;
  }
}

@media January {
  .c0 {
    opacity: November;
  }
}

@media April {
  .c0 {
    opacity: August;
  }
}

@media June {
  .c0 {
    opacity: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  opacity: July;
}

@media May {
  .c0 {
    opacity: August;
  }
}

@media April {
  .c0 {
    opacity: September;
  }
}

@media January {
  .c0 {
    opacity: November;
  }
}

@media April {
  .c0 {
    opacity: August;
  }
}

@media June {
  .c0 {
    opacity: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  opacity: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    opacity: November;
  }
}

@media April {
  .c0 {
    opacity: January;
  }
}

@media January {
  .c0 {
    opacity: December;
  }
}

@media April {
  .c0 {
    opacity: April;
  }
}

@media June {
  .c0 {
    opacity: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  opacity: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    opacity: November;
  }
}

@media April {
  .c0 {
    opacity: January;
  }
}

@media January {
  .c0 {
    opacity: December;
  }
}

@media April {
  .c0 {
    opacity: April;
  }
}

@media June {
  .c0 {
    opacity: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`opacity renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    opacity: July;
  }
}

@media April {
  .c0 {
    opacity: August;
  }
}

@media January {
  .c0 {
    opacity: September;
  }
}

@media April {
  .c0 {
    opacity: November;
  }
}

@media June {
  .c0 {
    opacity: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    opacity: July;
  }
}

@media April {
  .c0 {
    opacity: August;
  }
}

@media January {
  .c0 {
    opacity: September;
  }
}

@media April {
  .c0 {
    opacity: November;
  }
}

@media June {
  .c0 {
    opacity: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    opacity: January;
  }
}

@media April {
  .c0 {
    opacity: December;
  }
}

@media January {
  .c0 {
    opacity: April;
  }
}

@media April {
  .c0 {
    opacity: May;
  }
}

@media June {
  .c0 {
    opacity: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    opacity: January;
  }
}

@media April {
  .c0 {
    opacity: December;
  }
}

@media January {
  .c0 {
    opacity: April;
  }
}

@media April {
  .c0 {
    opacity: May;
  }
}

@media June {
  .c0 {
    opacity: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`opacity renders postitive number 1`] = `
Array [
  .c0 {
  opacity: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`opacity renders string 1`] = `
Array [
  .c0 {
  opacity: July;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: July;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: June;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: June;
}

<div
    className="c0"
  />,
]
`;

exports[`opacity renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`opacity renders valid theme path 1`] = `
Array [
  .c0 {
  opacity: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  opacity: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
